# chewing-pcc

./: .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix  install.sh  shell.nix
po/: CMakeLists.txt  fcitx5-intel_chewing.pot  zh_TW.po
src/: CMakeLists.txt  intel_chewing-addon.conf.in.in  intel_chewing.conf.in  intel_chewing.cpp  intel_chewing.h
